@@ -9,7 +9,8 @@
 # implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 
 AUTOMAKE_OPTIONS = no-dependencies dist-shar dist-zip
-EXTRA_DIST = autogen.sh README *.pc.in *.spec.in *.spec *-config.in Doxyfile
+EXTRA_DIST = autogen.sh README *.pc.in *.spec.in *.spec *-config.in \
+	Doxyfile cmodel.sh
 
 SUBDIRS = src inc test
 
