@@ -10,24 +10,15 @@
 
 MAINTAINERCLEANFILES = Makefile.in Makefile
 RELEASE = -version-info $(LT_VERSION) -release $(LT_RELEASE)
-MODEL = $(UCOMMON_MODEL)
 AM_CXXFLAGS = -I$(top_srcdir)/inc $(UCOMMON_FLAGS)
-CXXLINK = $(LIBTOOL) --tag=$(MODEL) --mode=link $(CXX) $(AM_CFLAGS) $(CFLAGS) \
-    $(AM_LDFLAGS) $(LDFLAGS) -o $@
-
-LTCXXCOMPILE = $(LIBTOOL) --tag=$(MODEL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
-	--mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) \
-	$(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)
 
 lib_LTLIBRARIES = libucommon.la 
 
-# libucommon_la_CXXFLAGS = $(UCOMMON_FLAGS)
-libucommon_la_LDFLAGS = --tag=$(MODEL) @UCOMMON_LIBS@ @UCOMMON_CLINK@ $(RELEASE) 
+libucommon_la_LDFLAGS = @UCOMMON_LIBS@ @UCOMMON_CLINK@ $(RELEASE) 
 libucommon_la_SOURCES = object.cpp linked.cpp string.cpp mapped.cpp \
 	counter.cpp bitmap.cpp timer.cpp memory.cpp socket.cpp \
 	access.cpp thread.cpp cpr.cpp vector.cpp
-libucommon_la_LINK = $(LIBTOOL) --tag=$(MODEL) $(AM_LIBTOOLFLAGS) \
-    $(LIBTOOLFLAGS) --mode=link $(CXXLD) $(AM_CXXFLAGS) \
-    $(CXXFLAGS) $(libucommon_la_LDFLAGS) $(LDFLAGS) -o $@
+
+
 
 
