@@ -1,6 +1,9 @@
 From ucommon 1.4.1 to 1.4.2
 - get address entry by family from list.
 - MultiMap/multimap multiply pathed lists/associated key objects.
+- remove complex automake rules; use new cmodel.sh to reset libtool when
+  building pure c mode link for c++ objects for deep embedding without
+  libstdc++.
 
 From ucommon 1.4.0 to 1.4.1
 - internalized getaddrinfo substituted on targets without addrinfo support.
